# Dog-House

Ileri-Bilgisayar-Grafikleri-Proje-main/: README.md
Ileri-Bilgisayar-Grafikleri-Proje-main/PROJE/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  my3dwidget.cpp  my3dwidget.h  resources.cpp  resources.h  resources.qrc  ui_mainwindow.h
